--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5371,6 +5371,8 @@
     <string name="daltonizer_mode_tritanomaly_title">Blue-yellow</string>
     <!-- Title shown for grayscale [CHAR LIMIT=45] -->
     <string name="daltonizer_mode_grayscale_title">Grayscale</string>
+    <!-- Title shown for settings that controls color correction saturation level [CHAR LIMIT=45] -->
+    <string name="daltonizer_saturation_title">Intensity</string>
     <!-- Summary shown for deuteranomaly (red-green color blindness) [CHAR LIMIT=45] -->
     <string name="daltonizer_mode_deuteranomaly_summary">Green weak, deuteranomaly</string>
     <!-- Summary shown for protanomaly (red-green color blindness) [CHAR LIMIT=45] -->
