--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13258,4 +13258,9 @@
 
     <!--Title for Sync Across Devices category-->
     <string name="sync_across_devices_title">Sync across devices</string>
+
+    <!-- Device Diagnostics -->
+
+    <!-- Title for System dashboard fragment -->
+    <string name="device_diagnostics_title">Device diagnostics</string>
 </resources>
