Rename settings option for autolocking on inactivity
Bug:328016823
Test: atest AutoLockPreferenceControllerTest
Flag: ACONFIG android.multiuser.support_autolock_for_private_space NEXT

Change-Id: Id4537efe5ac56df0fc98cef3ce6673a0673e0fba

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1257,8 +1257,8 @@
     <string name="private_space_auto_lock_page_summary">You can lock your private space automatically if you haven\’t used your device for a period of time</string>
     <!-- Configure auto lock: Value for auto lock configuration to lock private space every time device locks. [CHAR LIMIT=40] -->
     <string name="private_space_auto_lock_every_time">Every time device locks</string>
-    <!-- Configure auto lock: Value for auto lock configuration to lock private space after 5 minutes of inactivity. [CHAR LIMIT=40] -->
-    <string name="private_space_auto_lock_after_inactivity">After 5 minutes of inactivity</string>
+    <!-- Configure auto lock: Value for auto lock configuration to lock private space after 5 minutes of inactivity post screen timeout. [CHAR LIMIT=40] -->
+    <string name="private_space_auto_lock_after_inactivity">5 minutes after screen timeout</string>
     <!-- Configure auto lock: Value for auto lock configuration to lock private space only after device restarts. [CHAR LIMIT=40] -->
     <string name="private_space_auto_lock_after_device_restart">Only after device restarts</string>
     <!-- Title for the settings page for hiding private space. [CHAR LIMIT=45] -->
