Update access strings per UXW
Bug: 338390125
Test: Builds
Flag: EXEMPT resource only update
Change-Id: I4719a37bd63b46c51ae4cf3009abaf920d624697

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8552,7 +8552,7 @@
     <string name="notifications_sent_never">Never</string>
 
     <!-- Sound & notification > Advanced section: Title for managing notification listeners option. [CHAR LIMIT=60] -->
-    <string name="manage_notification_access_title">Device &amp; app notifications</string>
+    <string name="manage_notification_access_title">Notification read, reply &amp; control</string>
 
     <string name="manage_notification_access_summary">Control which apps and devices can read notifications</string>
 
@@ -8838,7 +8838,7 @@
     <string name="notification_content_block_summary">Never show notifications in the shade or on peripheral devices</string>
 
     <!-- [CHAR LIMIT=NONE] App notification settings: Full screen intent permission option title -->
-    <string name="app_notification_fsi_permission_title">Allow full screen notifications</string>
+    <string name="app_notification_fsi_permission_title">Allow full-screen notifications</string>
 
     <!-- [CHAR LIMIT=NONE] App notification settings: Full screen intent permission option description -->
     <string name="app_notification_fsi_permission_summary">Allow notifications to take up the full screen when the device is locked</string>
@@ -9852,10 +9852,10 @@
     <string name="filter_manage_external_storage">Can access all files</string>
 
     <!-- Manage full screen intent permission title [CHAR LIMIT=40] -->
-    <string name="full_screen_intent_title">Full screen notifications</string>
+    <string name="full_screen_intent_title">Full-screen notifications</string>
 
     <!-- Label for setting that allows apps to send full screen intents. [CHAR LIMIT=NONE] -->
-    <string name="permit_full_screen_intent">Allow full screen notifications from this app</string>
+    <string name="permit_full_screen_intent">Allow full-screen notifications from this app</string>
 
     <!-- Description for setting that allows apps to send full screen intents. [CHAR LIMIT=NONE] -->
     <string name="footer_description_full_screen_intent">Allow this app to show notifications that take up the full screen when the device is locked. Apps may use these to highlight alarms, incoming calls, or other urgent notifications.</string>
@@ -10186,8 +10186,8 @@
 
     <!-- Description of number of apps allowed to ignore Data Saver [CHAR LIMIT=NONE] -->
     <string name="data_saver_unrestricted_summary">{count, plural,
-      =1      {1 app allowed to use unrestricted data when Data Saver is on}
-      other   {# apps allowed to use unrestricted data when Data Saver is on}
+      =1      {1 app allowed to use unrestricted mobile data when Data Saver is on}
+      other   {# apps allowed to use unrestricted mobile data when Data Saver is on}
     }</string>
 
     <!-- Data usage title text [CHAR LIMIT=30] -->
@@ -10241,8 +10241,8 @@
     <!-- Name of Data Saver screens [CHAR LIMIT=30] -->
     <string name="data_saver_title">Data Saver</string>
 
-    <!-- Button that leads to list of apps with unrestricted data access [CHAR LIMIT=60] -->
-    <string name="unrestricted_data_saver">Unrestricted data</string>
+    <!-- Button that leads to list of apps with unrestricted mobile data access [CHAR LIMIT=60] -->
+    <string name="unrestricted_data_saver">Unrestricted mobile data</string>
 
     <!-- Description of message shown when app is blocklisted for background data access [CHAR LIMIT=NONE] -->
     <string name="restrict_background_blocklisted">Background data is turned off</string>
@@ -10256,11 +10256,11 @@
     <!-- Switch label to enable the Data Saver feature [CHAR LIMIT=NONE] -->
     <string name="data_saver_switch_title">Use Data Saver</string>
 
-    <!-- Title for switch to allow app unrestricted data usage [CHAR LIMIT=NONE] -->
-    <string name="unrestricted_app_title">Unrestricted data usage</string>
+    <!-- Title for switch to allow app unrestricted mobile data usage [CHAR LIMIT=NONE] -->
+    <string name="unrestricted_app_title">Unrestricted mobile data usage</string>
 
     <!-- Title for switch to allow app unrestricted data usage [CHAR LIMIT=NONE] -->
-    <string name="unrestricted_app_summary">Allow unrestricted data access when Data Saver is on</string>
+    <string name="unrestricted_app_summary">Allow unrestricted mobile data access when Data Saver is on</string>
 
     <!-- Button to switch the default home app [CHAR LIMIT=60] -->
     <string name="home_app">Home app</string>
@@ -10462,13 +10462,13 @@
     <string name="developer_smallest_width">Smallest width</string>
 
     <!-- Message shown when there are no premium SMS apps [CHAR LIMIT=NONE] -->
-    <string name="premium_sms_none">No installed apps have requested Premium SMS access</string>
+    <string name="premium_sms_none">No installed apps have requested Premium SMS</string>
 
     <!-- Warning message shown between options to enable Premium SMS for an app [CHAR LIMIT=NONE] -->
     <string name="premium_sms_warning">Premium SMS may cost you money and will add up to your carrier bills. If you enable permission for an app, you will be able to send premium SMS using that app.</string>
 
     <!-- Title of screen controlling which apps have access to send premium SMS messages [CHAR LIMIT=60] -->
-    <string name="premium_sms_access">Premium SMS access</string>
+    <string name="premium_sms_access">Premium SMS</string>
 
     <!-- Summary for Bluetooth when disabled. [CHAR LIMIT=NONE] -->
     <string name="bluetooth_disabled">Off</string>
