Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ib3d12bcc4aa3efbcab08a95474711bd73f1c3448

--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -3781,7 +3781,7 @@
     <string name="data_warning_footnote" msgid="5991901765915710592">"Datawaarskuwing en datalimiet word deur jou toestel gemeet. Dit kan van die diensverskafferdata verskil."</string>
     <string name="set_data_limit" msgid="9010326815874642680">"Stel datalimiet"</string>
     <string name="data_limit" msgid="8731731657513652363">"Datalimiet"</string>
-    <string name="data_usage_template" msgid="3822452362629968010">"<xliff:g id="ID_1">%1$s</xliff:g> in <xliff:g id="ID_2">%2$s</xliff:g> gebruik"</string>
+    <string name="data_usage_template" msgid="3822452362629968010">"<xliff:g id="ID_1">%1$s</xliff:g> tydens <xliff:g id="ID_2">%2$s</xliff:g> gebruik"</string>
     <string name="configure" msgid="1499586749829665889">"Stel op"</string>
     <string name="data_usage_other_apps" msgid="5649047093607329537">"Ander programme wat by gebruik ingesluit is"</string>
     <string name="data_saver_unrestricted_summary" msgid="7343571401172437542">"{count,plural, =1{1 app word toegelaat om onbeperkte data te gebruik wanneer Databespaarder aan is}other{# apps word toegelaat om onbeperkte data te gebruik wanneer Databespaarder aan is}}"</string>
