--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -3274,8 +3274,8 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Questa app non supporta le impostazioni avanzate"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"Altre impostazioni"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Altre impostazioni sono disponibili all\'interno di quest\'app"</string>
-    <string name="vr_listeners_title" msgid="4960357292472540964">"Servizi helper VR"</string>
-    <string name="no_vr_listeners" msgid="8442646085375949755">"Nessuna app installata ha richiesto di essere eseguita come servizio helper VR."</string>
+    <string name="vr_listeners_title" msgid="4960357292472540964">"Servizi di supporto VR"</string>
+    <string name="no_vr_listeners" msgid="8442646085375949755">"Nessuna app installata ha richiesto di essere eseguita come servizio di supporto VR."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Consentire l\'accesso a <xliff:g id="SERVICE">%1$s</xliff:g> al servizio VR?"</string>
     <string name="vr_listener_security_warning_summary" msgid="1888843557687017791">"<xliff:g id="VR_LISTENER_NAME">%1$s</xliff:g> potrà essere eseguito quando utilizzi applicazioni in modalità realtà virtuale."</string>
     <string name="display_vr_pref_title" msgid="4850474436291113569">"Quando in modalità VR"</string>
@@ -3672,7 +3672,7 @@
     <string name="media_management_apps_toggle_label" msgid="166724270857067456">"Consenti all\'app di gestire contenuti multimediali"</string>
     <string name="media_management_apps_description" msgid="8000565658455268524">"Se autorizzata, questa app può modificare o eliminare file multimediali creati con altre app senza chiederti l\'autorizzazione. L\'app deve avere l\'autorizzazione di accesso a file e contenuti multimediali."</string>
     <string name="keywords_media_management_apps" msgid="7499959607583088690">"Contenuti multimediali, File, Gestione, Manager, Gestire, Modificare, Editor, App, Applicazione, Programma"</string>
-    <string name="keywords_vr_listener" msgid="902737490270081131">"vr realtà virtuale listener stereo helper servizio"</string>
+    <string name="keywords_vr_listener" msgid="902737490270081131">"vr realtà virtuale listener stereo servizio supporto"</string>
     <string name="overlay_settings" msgid="2030836934139139469">"Mostra sopra altre app"</string>
     <string name="filter_overlay_apps" msgid="2483998217116789206">"App con autorizzazione"</string>
     <string name="app_permission_summary_allowed" msgid="1155115629167757278">"Autorizzazione concessa"</string>
