--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -2577,7 +2577,7 @@
     <string name="vpn_ipsec_user_cert" msgid="2714372103705048405">"Chứng chỉ người dùng IPSec"</string>
     <string name="vpn_ipsec_ca_cert" msgid="5558498943577474987">"Chứng chỉ IPSec CA"</string>
     <string name="vpn_ipsec_server_cert" msgid="1411390470454731396">"Chứng chỉ máy chủ IPSec"</string>
-    <string name="vpn_show_options" msgid="6105437733943318667">"Hiện tùy chọn nâng cao"</string>
+    <string name="vpn_show_options" msgid="6105437733943318667">"Hiện tuỳ chọn nâng cao"</string>
     <string name="vpn_search_domains" msgid="1973799969613962440">"Miền tìm kiếm DNS"</string>
     <string name="vpn_dns_servers" msgid="6505263074417737107">"Máy chủ DNS (ví dụ: 8.8.8.8)"</string>
     <string name="vpn_routes" msgid="1218707725375594862">"Các tuyến chuyển tiếp (vd: 10.0.0.0/8)"</string>
