--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -3383,7 +3383,7 @@
     <string name="zen_mode_calls_header" msgid="8379225445095856726">"कस कसले कल गर्दा यो सेटिङ लागू हुँदैन"</string>
     <string name="zen_mode_calls_footer" msgid="2008079711083701243">"अनुमति दिइएका कलहरू आउँदा घन्टी बजोस् भन्नाका लागि डिभाइसको घन्टी बज्ने मोड अन छ भन्ने कुरा सुनिश्चित गर्नुहोस्"</string>
     <string name="zen_mode_custom_calls_footer" msgid="6521283204577441053">"‘<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>’ मा आगमन कल निषेध गरिएको हुन्छ। तपाईं आफ्ना साथीभाइ, परिवारजन वा अन्य सम्पर्कहरूलाई आफूसँग सम्पर्क राख्न दिने गरी सेटिङहरू समायोजन गर्न सक्नुहुन्छ।"</string>
-    <string name="zen_mode_starred_contacts_title" msgid="630299631659575589">"ताराङ्कित सम्पर्कहरू"</string>
+    <string name="zen_mode_starred_contacts_title" msgid="630299631659575589">"ताराङ्कित कन्ट्याक्टहरू"</string>
     <string name="zen_mode_starred_contacts_summary_contacts" msgid="1629467178444895094">"{count,plural,offset:2 =0{कुनै पनि होइन}=1{{contact_1}}=2{{contact_1} र {contact_2}}=3{{contact_1}, {contact_2} र {contact_3}}other{{contact_1}, {contact_2} र अरू #}}"</string>
     <string name="zen_mode_starred_contacts_empty_name" msgid="2906404745550293688">"(कुनै नाम छैन)"</string>
     <string name="zen_mode_messages" msgid="7315084748885170585">"म्यासेजहरू"</string>
@@ -3442,7 +3442,7 @@
     <string name="zen_mode_repeat_callers_title" msgid="8016699240338264781">"धेरै कल गर्ने व्यक्तिहरू"</string>
     <string name="zen_mode_all_callers" msgid="8104755389401941875">"जोसुकै"</string>
     <string name="zen_mode_contacts_callers" msgid="5429267704011896833">"कन्ट्याक्टहरू"</string>
-    <string name="zen_mode_starred_callers" msgid="1002370699564211178">"ताराङ्कित सम्पर्कहरू"</string>
+    <string name="zen_mode_starred_callers" msgid="1002370699564211178">"ताराङ्कित कन्ट्याक्टहरू"</string>
     <string name="zen_mode_repeat_callers_list" msgid="181819778783743847">"धेरै कल गर्ने व्यक्तिहरू"</string>
     <!-- no translation found for zen_mode_calls_summary_one (1928015516061784276) -->
     <skip />
